updated docker and pom